Crash in Blender 2.93 when changing render properties with rendered viewport #85144

Closed
opened 2021-01-28 10:53:23 +01:00 by Marco Iozzi · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version:

  • 2.93.0 Alpha, branch: master, commit date: 2021-01-28 09:34, hash: 9fdb32bf51
  • 2.93.0 Alpha, branch: master, commit date: 2021-01-25 23:22, hash: ae1e68f514
  • 2.93.0 Alpha, branch: master, commit date: 2021-01-24 23:16, hash: cf6d17a6aa
    Worked:
  • 2.93.0 Alpha, branch: master, commit date: 2021-01-17 11:35, hash: 4ef0654449

Short description of error
Cycles crash when changing some parameters while rendering in the viewport in latest 2.93 builds.

Exact steps for others to reproduce the error

  • Download the Car Demo scene (download here )
  • Switch viewport shading to Rendered

In Render Properties > Sampling > Advanced increase the Min Light Bounces

blender.exe         :0x00007FF70CEF8D90  ccl::kernel_branched_path_surface_connect_light
blender.exe         :0x00007FF70CF066A0  ccl::kernel_path_trace
blender.exe         :0x00007FF70CEAF070  ccl::kernel_cpu_avx2_path_trace
blender.exe         :0x00007FF70CBB4AD0  ccl::CPUDevice::render
blender.exe         :0x00007FF70CBB59B0  ccl::CPUDevice::thread_render
blender.exe         :0x00007FF70CBB5E40  ccl::CPUDevice::thread_run
blender.exe         :0x00007FF70CBB03E0  std::_Func_impl_no_alloc<<lambda_d884e08a7877f415f05ce8ffda8f97b4>,void>::_Do_call
blender.exe         :0x00007FF70F11C850  tbb::internal::function_task<std::function<void __cdecl(void)> >::execute
tbb.dll             :0x00007FFBCC7E37A0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFBCC7E37A0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF70C00ABC0  
blender.exe         :0x00007FF70F11BA30  ccl::TaskPool::wait_work
blender.exe         :0x00007FF70CFDE430  ccl::Session::run_cpu
blender.exe         :0x00007FF70CFDCD80  ccl::Session::run
blender.exe         :0x00007FF70F11F140  ccl::thread::run
blender.exe         :0x00007FF70C822140  std::thread::_Invoke<std::tuple<void * __ptr64 (__cdecl*)(void * __ptr64),ccl::thread * __ptr64>,0,
ucrtbase.dll        :0x00007FFBE14F1430  configthreadlocale
KERNEL32.dll        :0x00007FFBE2E57020  BaseThreadInitThunk
ntdll.dll           :0x00007FFBE35BD0B0  RtlUserThreadStart
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: - 2.93.0 Alpha, branch: master, commit date: 2021-01-28 09:34, hash: `9fdb32bf51` - 2.93.0 Alpha, branch: master, commit date: 2021-01-25 23:22, hash: `ae1e68f514` - 2.93.0 Alpha, branch: master, commit date: 2021-01-24 23:16, hash: `cf6d17a6aa` Worked: - 2.93.0 Alpha, branch: master, commit date: 2021-01-17 11:35, hash: `4ef0654449` **Short description of error** Cycles crash when changing some parameters while rendering in the viewport in latest 2.93 builds. **Exact steps for others to reproduce the error** - Download the Car Demo scene ([download here ](https://download.blender.org/demo/test/BMW27_2.blend.zip)) - Switch viewport shading to *Rendered* # In *Render Properties > Sampling > Advanced* increase the *Min Light Bounces* ```lines blender.exe :0x00007FF70CEF8D90 ccl::kernel_branched_path_surface_connect_light blender.exe :0x00007FF70CF066A0 ccl::kernel_path_trace blender.exe :0x00007FF70CEAF070 ccl::kernel_cpu_avx2_path_trace blender.exe :0x00007FF70CBB4AD0 ccl::CPUDevice::render blender.exe :0x00007FF70CBB59B0 ccl::CPUDevice::thread_render blender.exe :0x00007FF70CBB5E40 ccl::CPUDevice::thread_run blender.exe :0x00007FF70CBB03E0 std::_Func_impl_no_alloc<<lambda_d884e08a7877f415f05ce8ffda8f97b4>,void>::_Do_call blender.exe :0x00007FF70F11C850 tbb::internal::function_task<std::function<void __cdecl(void)> >::execute tbb.dll :0x00007FFBCC7E37A0 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFBCC7E37A0 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF70C00ABC0 blender.exe :0x00007FF70F11BA30 ccl::TaskPool::wait_work blender.exe :0x00007FF70CFDE430 ccl::Session::run_cpu blender.exe :0x00007FF70CFDCD80 ccl::Session::run blender.exe :0x00007FF70F11F140 ccl::thread::run blender.exe :0x00007FF70C822140 std::thread::_Invoke<std::tuple<void * __ptr64 (__cdecl*)(void * __ptr64),ccl::thread * __ptr64>,0, ucrtbase.dll :0x00007FFBE14F1430 configthreadlocale KERNEL32.dll :0x00007FFBE2E57020 BaseThreadInitThunk ntdll.dll :0x00007FFBE35BD0B0 RtlUserThreadStart ```
Author

Added subscriber: @marcoiozzi

Added subscriber: @marcoiozzi
Robert Guetzkow changed title from Crash: Regression in latest Blender 2.93 with rendered viewport to Crash in Blender 2.93 when changing render properties with rendered viewport 2021-01-28 11:13:10 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @rjg

Added subscriber: @rjg

I'm bisecting this now.

I'm bisecting this now.

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

This appears to have been caused by bbe6d44928 @kevindietrich.

This appears to have been caused by bbe6d44928 @kevindietrich.

I cannot reproduce a crash neither in a release build, neither in a debug build, however I can see OptiX failing at the end of path tracing so I guess that's it.

I cannot reproduce a crash neither in a release build, neither in a debug build, however I can see OptiX failing at the end of path tracing so I guess that's it.
Kévin Dietrich self-assigned this 2021-01-29 16:44:06 +01:00

This issue was referenced by d0f59d3842

This issue was referenced by d0f59d38429d945b3215890897eb2cfb90eacaa7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

I'm getting a crash while on workbench viewport just by changing the cycles samples number.

Reproducible both in win and lin

hash: 59054d906f

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000000000e3f4e33 in ghash_keyhash (key=0x7fffffffcf50, gh=0x0) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:148
148	  return gh->hashfp(key);
(gdb) bt
- 0  0x000000000e3f4e33 in ghash_keyhash (key=0x7fffffffcf50, gh=0x0) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:148
- 1  ghash_lookup_entry (key=0x7fffffffcf50, gh=0x0) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:427
- 2  BLI_ghash_lookup (gh=0x0, key=0x7fffffffcf50) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:805
- 3  0x000000000357fe5d in BKE_scene_get_depsgraph (scene=0x7fff4f3f3808, view_layer=0x7fff6f079b08)
    at /home/zanqdo/Software/blender-git/blender/source/blender/blenkernel/intern/scene.c:3462
- 4  0x0000000003d1b1e6 in DRW_cache_free_old_batches (bmain=0x7fffc7a7e708) at /home/zanqdo/Software/blender-git/blender/source/blender/draw/intern/draw_manager.c:994
- 5  0x0000000004c79c5d in view3d_main_region_draw (C=0x7ffff4710f88, region=0x7fffab5e1988)
    at /home/zanqdo/Software/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1626
- 6  0x0000000004522c9e in ED_region_do_draw (C=0x7ffff4710f88, region=0x7fffab5e1988) at /home/zanqdo/Software/blender-git/blender/source/blender/editors/screen/area.c:558
- 7  0x0000000003a231f8 in wm_draw_window_offscreen (C=0x7ffff4710f88, win=0x7fffaee67208, stereo=false)
    at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:731
- 8  0x0000000003a237b9 in wm_draw_window (C=0x7ffff4710f88, win=0x7fffaee67208) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:872
- 9  0x0000000003a23e05 in wm_draw_update (C=0x7ffff4710f88) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1073
- 10 0x0000000003a203b2 in WM_main (C=0x7ffff4710f88) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm.c:643
- 11 0x0000000003404bd5 in main (argc=1, argv=0x7fffffffdf38) at /home/zanqdo/Software/blender-git/blender/source/creator/creator.c:522
I'm getting a crash while on workbench viewport just by changing the cycles samples number. Reproducible both in win and lin hash: `59054d906f` ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000000000e3f4e33 in ghash_keyhash (key=0x7fffffffcf50, gh=0x0) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:148 148 return gh->hashfp(key); (gdb) bt - 0 0x000000000e3f4e33 in ghash_keyhash (key=0x7fffffffcf50, gh=0x0) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:148 - 1 ghash_lookup_entry (key=0x7fffffffcf50, gh=0x0) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:427 - 2 BLI_ghash_lookup (gh=0x0, key=0x7fffffffcf50) at /home/zanqdo/Software/blender-git/blender/source/blender/blenlib/intern/BLI_ghash.c:805 - 3 0x000000000357fe5d in BKE_scene_get_depsgraph (scene=0x7fff4f3f3808, view_layer=0x7fff6f079b08) at /home/zanqdo/Software/blender-git/blender/source/blender/blenkernel/intern/scene.c:3462 - 4 0x0000000003d1b1e6 in DRW_cache_free_old_batches (bmain=0x7fffc7a7e708) at /home/zanqdo/Software/blender-git/blender/source/blender/draw/intern/draw_manager.c:994 - 5 0x0000000004c79c5d in view3d_main_region_draw (C=0x7ffff4710f88, region=0x7fffab5e1988) at /home/zanqdo/Software/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1626 - 6 0x0000000004522c9e in ED_region_do_draw (C=0x7ffff4710f88, region=0x7fffab5e1988) at /home/zanqdo/Software/blender-git/blender/source/blender/editors/screen/area.c:558 - 7 0x0000000003a231f8 in wm_draw_window_offscreen (C=0x7ffff4710f88, win=0x7fffaee67208, stereo=false) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:731 - 8 0x0000000003a237b9 in wm_draw_window (C=0x7ffff4710f88, win=0x7fffaee67208) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:872 - 9 0x0000000003a23e05 in wm_draw_update (C=0x7ffff4710f88) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1073 - 10 0x0000000003a203b2 in WM_main (C=0x7ffff4710f88) at /home/zanqdo/Software/blender-git/blender/source/blender/windowmanager/intern/wm.c:643 - 11 0x0000000003404bd5 in main (argc=1, argv=0x7fffffffdf38) at /home/zanqdo/Software/blender-git/blender/source/creator/creator.c:522 ```

@zanqdo please open a new bug report, this looks nothing alike the issue from this report

@zanqdo please open a new bug report, this looks nothing alike the issue from this report
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85144
No description provided.