Fix T85144: Cycles crashes when editing render properties in viewport rendering

Issue was caused by the sample pattern LUT always being freed and not
rebuilt when properties driving its dimensions were modified.